--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.7",
     "ag-grid-react": "^32.3.3",
     "axios": "^1.7.7",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
