--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@mui/material": "^6.1.7",
     "ag-grid-react": "^32.3.3",
     "axios": "^1.7.7",
+    "framer-motion": "^12.4.1",
+    "lucide-react": "^0.474.0",
+    "mathjax-react": "^2.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
